--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: autonorm
 Type: Package
-Title: What the package does (short line)
+Title: A package for auto-generating relational databases from text files using genetic algorithms
 Version: 1.0
 Date: 2020-09-14
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: Emre Akadal (@akadal), Mehmet Hakan Satman (@jbytecode)
+Maintainer: Emre Akadal <akadal@istanbul.edu.tr>
+Description: A description will be added here
+License: MIT
